<resources>
    <string name="app_name">Buggee</string>


    <string name="facebook_app_id">fb_id</string>
    <string name="fb_login_protocol_scheme">fb(fb_id)</string>


    <string name="ad_app_id">ca-app-pub</string>
    <string name="my_Interstitial_Add">ca-app-pub</string>
    <string name="banner_ad">ca-app-pub</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="version">1.0</string>
    <string name="device">android</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dot">.</string>
    <string name="private_account_details">With a private account, only users you approve can follow you and view your videos and likes, Your existing followers won\'t be affected!</string>
    <string-array name="gender_array">
        <item>Select Your Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="setting_title">Settings</string>
    <string name="setting_resolution_title">Resolution</string>
    <string name="setting_stats_title">Show video statistics</string>
    <string name="setting_mirror_local_title">Local video preview mirror mode</string>
    <string name="setting_mirror_remote_title">Remote video render mirror mode</string>
    <string name="setting_mirror_encode_title">Local video encode mirror mode</string>

    <string-array name="string_array_resolutions">
        <item>320x240</item>
        <item>480x360</item>
        <item>640x360</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
    </string-array>

    <!-- Live Activity -->
    <string name="fake_user_name" translatable="false">Shakespeare</string>

    <!-- Role Choose Activity -->
    <string name="select_role_title">Please choose your role</string>
    <string name="select_role_broadcaster">Broadcaster</string>
    <string name="select_role_audience">Audience</string>
    <string name="select_role_broadcaster_hint">Join as broadcaster</string>
    <string name="select_role_audience_hint">Join as audience</string>
    <string name="live_file">liveFile</string>
    <string name="live_exist">exist</string>
    <string name="live_name">name</string>
    <string name="live_details">details</string>
    <!-- Legal digits for channel names -->
    <string name="legal_channel_name_characters" translatable="false">&#xA0;abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!#$%&amp;()+,-:;&lt;=.>?@[]^_`{|}~</string>
    <string name="private_app_id" translatable="false">b7172f62d7bc4d3c970804555c5497f5</string>
    <string name="request_verification">Request Verification</string>
    <string name="apply_for_tic_tic_verification">Apply for Buggee Verification</string>
    <string name="upper_body">A verified badge is check that aapears next to an \nBuggee accounts name to indiacte that the \naccount is the authentic presence of notable \npublic figure , celebrity, global brand or entity it \nrepresents.</string>
    <string name="upper_body_below">Submitting a request for verification \ndoes not guarantee that your account will be verified</string>
    <string name="lower_body">We require a goverment-issued photo ID that shows \nyour name and date of birth(e.g driver\'s license.\npassport or national identification card) or official \nbusiness documents(tax filing, recent utility bill, article of \nincorporation) in order to review your request.</string>
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="default_notification_channel_id">com.android.buggee</string>
    <string name="sha1">89:76:03:AF:86:5D:76:3F:97:7A:BE:C0:1A:61:20:6E:B2:19:54:FA</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="deep_ar_key">19b3d4e98ec4af49d4c08a6a5b664a00da6b7c3ed0c6f74c14680ef0943e08553913f064ee22b99d</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
</resources>
