<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Chat_F"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:paddingTop="24dp"
    tools:context="com.qboxus.musictok.Chat.Chat_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/Goback"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:scaleType="fitStart"
                android:src="@drawable/ic_back"
                android:tint="@color/text" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/avenir_bold"
                android:text="@string/request_verification"
                android:textColor="@color/white"
                android:textSize="15dp" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_bold"
                android:text="@string/apply_for_tic_tic_verification"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_regular"
                android:justificationMode="inter_word"
                android:text="@string/upper_body"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_regular"
                android:justificationMode="inter_word"
                android:text="@string/upper_body_below"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/avenir_bold"
                    android:text="Username"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/avenir_regular"
                    android:hint="username"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/avenir_bold"
                    android:text="Full name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/fullname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/avenir_regular"
                    android:hint="full name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/file_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@+id/choose_file_btn"
                    android:fontFamily="@font/avenir_bold"
                    android:padding="5dp"
                    android:text="@string/apply_for_tic_tic_verification"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/choose_file_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/avenir_bold"
                    android:padding="5dp"
                    android:text="Choose File"
                    android:textColor="@color/text"
                    android:textSize="16dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="4sp"
                android:text="@string/lower_body"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <Button
                android:id="@+id/send_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="Send"
                android:textColor="@color/text"
                android:textSize="16dp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>